testcases/error/unknown_unsafe.veryl
module unknown_unsafe {
    unsafe (dummy) {}
}
